# one_task_multiple_infras

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml
inference_bentoml/: .gitignore  Dockerfile.template  README.md  bentofile.yaml  requirements.in  requirements.txt
inference_bentoml/bento_store/: client_id
inference_bentoml/inference_bentoml/: plate_recognition.py  service.py  settings.py
inference_bentoml/tests/: conftest.py  test_models.py  test_service.py
inference_rayserve/: Dockerfile  README.md  requirements.in  requirements.txt
inference_torchserve/: README.md  pyproject.toml
inference_torchserve/docker/: common.yml  dev.yml
inference_torchserve/docker/dockerfiles/: DockerfileTorchServe
inference_torchserve/inference_torchserve/: config.properties  data_models.py
inference_torchserve/inference_torchserve/handlers/: lprnet.py  plate_recognition.py  stn.py  yolo.py
inference_torchserve/inference_torchserve/model_store/: lprnet.mar  plate_recognition.war  stn.mar
inference_torchserve/inference_torchserve/scripts/: README.md  prepare_lprnet.py  prepare_stn.py  register_workflows.py
inference_torchserve/inference_torchserve/workflow/: plate_recognition.yaml
inference_torchserve/tests/functional/: test_models.py
inference_triton/: Dockerfile  README.md  README.rst  pyproject.toml
inference_triton/docker/: prod.yml
inference_triton/docker/Dockerfiles/: DockerfileTriton
inference_triton/inference_triton/model_repository/lprnet/: config.pbtxt
inference_triton/inference_triton/model_repository/lprnet/1/: model.pt
inference_triton/inference_triton/model_repository/plate_recognition/: config.pbtxt
inference_triton/inference_triton/model_repository/plate_recognition/1/: model.py
inference_triton/inference_triton/model_repository/stn/: config.pbtxt
inference_triton/inference_triton/model_repository/stn/1/: model.pt
inference_triton/inference_triton/model_repository/yolo/: config.pbtxt
inference_triton/inference_triton/model_repository/yolo/1/: model.py
inference_triton/inference_triton/scripts/: prepare_lprnet.py  prepare_stn.py  prepare_yolo.py
inference_triton/tests/: test_inference_triton.py
inference_triton/tests/functional/: test_models.py
nn/: README.md  pyproject.toml
nn/nn/: settings.py
nn/nn/inference/: decode.py  predictor.py
nn/nn/models/: __init__.py  lprnet.py  stn.py  yolo.py
nn/nn/weights/: README.md  lprnet.pth  stn.pth
nn/tests/: test_nn.py
nn/tests/integration/: test_predictor.py
nn/tests/unit/models/: test_lprnet.py  test_stn.py  test_yolo.py
(+18 files in other folders)
