[tool.poetry]
name = "inference_triton"
version = "0.1.0"
description = ""
authors = ["shest <shestopalovegor@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
nn = {path = "../nn", develop = true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
