[tool.poetry]
name = "nn"
version = "0.1.0"
description = "Package for russian car licence plate recognition"
authors = ["shest"]

[tool.poetry.dependencies]
python = "~3.8"
opencv-python-headless = "^4.7.0"
pandas = "^1.5.3"
requests = "^2.28.2"
ipython = "^8.9.0"
psutil = "^5.9.4"
tqdm = "^4.64.1"
matplotlib = "^3.6.3"
seaborn = "^0.12.2"
scipy = "^1.10.0"
GitPython = "^3.1.30"
pydantic = "^1.10.4"
torch = "^1.13.1"
torchvision = "^0.14.1"
pillow = "^9.4.0"
pyyaml = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^3.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
